--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 22
     buildToolsVersion "23.0.0"
     defaultConfig {
-        applicationId "ru.payqr.dadataexample"
+        applicationId "ru.zsavely.dadataexample"
         minSdkVersion 9
         targetSdkVersion 22
         versionCode 1
